# claude-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  bootstrap.sh  doctor.sh  harvest.config.json.example  install.sh  platform.config.toml.example  pyproject.toml  ruff.toml
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: portability.yml  release.yml
commands/: harvest.md
docs/: harness-map.html
docs/superpowers/plans/: 2026-07-01-r2-install-orchestrator.md  2026-07-01-r3-ci-portability-gate.md  2026-07-06-phase2-plugin-migration.md  2026-07-07-release-management.md
docs/superpowers/specs/: 2026-07-01-r2-install-orchestrator-design.md  (+3 more)
examples/bootstrap-and-doctor/: demo.sh  demo.tape
hooks/: cost-discipline.py  hooks.json
lib/: _report_table.py  bump_plugin_version.py  config_loader.py  cost_ledger_report.py  fire_log_report.py  metrics_snapshot.py  migrate_to_plugin.py  settings_merge.py
skills/claude-cost-audit/: SKILL.md
skills/delegation-discipline/: SKILL.md
skills/harvest/: SKILL.md  harvest.mjs
skills/models-router/: SKILL.md
tests/: smoke_install.sh  test_bump_plugin_version.py  test_config_loader_wiki_url.py  test_cost_ledger.py  test_cost_ledger_report.py  test_doctor_plugin_detection.sh  test_fire_log_report.py  test_harness_hygiene.py  test_metrics_snapshot.py  test_migrate_to_plugin.py  test_migrate_to_plugin.sh  test_plugin_manifest.py  test_report_table.py  test_settings_merge.py
(+10 files in other folders)
